--- a/web/index.html
+++ b/web/index.html
@@ -33,6 +33,29 @@
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.9.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.9.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyCPFVBs51AoZI624tQgJZcxpthpI34Skk8",
+    authDomain: "hakan-e439d.firebaseapp.com",
+    projectId: "hakan-e439d",
+    storageBucket: "hakan-e439d.firebasestorage.app",
+    messagingSenderId: "684240182376",
+    appId: "1:684240182376:web:d5a3ed8db46b22a4a7afdd",
+    measurementId: "G-4W3K6W60KP"
+  };
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
+<script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
